Maybe fix css problem on iOS

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -71,6 +71,7 @@
   &-content
     writing-mode: tb-rl
     border: none !important
+    white-space: nowrap
 
 tr:last-child td, .content table tbody tr:last-child th
   border: 1px solid #dbdbdb !important
